--- a/unused/indexa.html
+++ b/unused/indexa.html
@@ -45,33 +45,7 @@
             background-color: #26265E;
             color: #F0EDEE;
         }
-        input[type="checkbox"] {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 5px;
-    border: 2px solid #3df1fb;
-    background-color: #26265E;
-    outline: none;
-    margin-top: 10px;
-    position: relative;
-}
-
-input[type="checkbox"]:checked:after {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 10px;
-    width: 5px;
-    height: 10px;
-    border: solid #3df1fb;
-    border-width: 0 2px 2px 0;
-    transform: rotate(45deg);
-}
-
-
+    
         input[type="checkbox"] {
             display: inline-block;
             margin-left: 5px;
@@ -82,7 +56,7 @@ input[type="checkbox"]:checked:after {
             padding: 10px 20px;
             border-radius: 5px;
             border: none;
-            background-color: #3df1fb;
+            background-color: #52e2e9;
             color: white;
             cursor: pointer;
             transition: background-color 0.3s ease;
@@ -119,6 +93,24 @@ input[type="checkbox"]:checked:after {
             font-size: 14px;
             color: #F0EDEE;
         }
+        .btn-group label {
+  display: inline-block;
+  margin-right: 5px;
+  cursor: pointer;
+  padding: 8px 16px;
+  border-radius: 5px;
+  color: white;
+  background-color: #52e2e9;
+}
+
+.btn-group input[type="radio"] {
+  display: none;
+}
+
+.btn-group input[type="radio"]:checked + label {
+  background-color: #2323d7;
+}
+
     </style>    
 </head>
 <body>
@@ -140,8 +132,13 @@ input[type="checkbox"]:checked:after {
             <option value="240p">240p</option>
         </select><br><br>
 
-        <label for="is_playlist">Playlist:</label>
-        <input type="checkbox" name="is_playlist" id="is_playlist"><br><br>
+        <label>Playlist:</label>
+        <div class="btn-group">
+          <input type="radio" id="is_playlist_yes" name="is_playlist" value="yes">
+          <label for="is_playlist_yes">Yes</label>
+          <input type="radio" id="is_playlist_no" name="is_playlist" value="no" checked>
+          <label for="is_playlist_no">No</label>
+        </div>           
 
         <label for="format">Format:</label>
         <select name="format" id="format">
